--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 
+
 # Created by https://www.toptal.com/developers/gitignore/api/java,eclipse,windows,maven
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,eclipse,windows,maven
 
@@ -14,6 +15,7 @@ local.properties
 .settings/
 .loadpath
 .recommenders
+target/*
 
 # External tool builders
 .externalToolBuilders/
